[project]
name = "decontext_exp"
version = "0.1.0"
description =  """Experiments for decontextualizing scientific snippets."""
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "bert-score==0.3.12",
  "hydra-core==1.2.0",
  "omegaconf==2.2.3",
  "openai>=0.27.0",
  "pytorch-lightning>=1.7.7",
  "rouge-score==0.1.2",
  "scikit-learn==1.1.2",
  "sentencepiece>=0.1.97",
  "transformers==4.28.1",
  "sentence-transformers==2.2.2",
  "wandb>=0.13.4",
  "anthropic==0.2.10",
  "bitsandbytes==0.39.0",
  "shadow_scholar==0.6.0",
  "unidecode==1.3.6",
  "spacy==3.4.1",
  "accelerate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
decontext_exp = ["py.typed"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "pip >= 21.0.0",
    "wheel"
]

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
